--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+ansible==2.7.18
+appdirs==1.4.4
 APScheduler==3.6.3
 argcomplete==1.12.2
 asgiref==3.3.1
+Babel==2.9.0
+bcrypt==3.2.0
 boto==2.49.0
 boto3==1.16.44
 botocore==1.19.44
@@ -10,6 +14,7 @@ cfn-flip==1.2.3
 chardet==3.0.4
 click==7.1.2
 cryptography==3.3.1
+decorator==4.4.2
 defusedxml==0.6.0
 Django==3.1.4
 django-allauth==0.44.0
@@ -29,6 +34,7 @@ djangorestframework==3.12.2
 djangorestframework-api-key==2.0.0
 djangorestframework-jwt==1.11.0
 djangorestframework-simplejwt==4.4.0
+dogpile.cache==1.1.1
 drf-api-tracking==1.7.8
 durationpy==0.5
 Faker==5.1.0
@@ -36,18 +42,33 @@ future==0.18.2
 googlemaps==4.4.2
 hjson==3.0.2
 idna==2.10
+iso8601==0.1.13
+Jinja2==2.11.2
 jmespath==0.10.0
+jsonpatch==1.28
+jsonpointer==2.0
 kappa==0.6.0
+keystoneauth1==4.3.0
+MarkupSafe==1.1.1
+munch==2.5.0
+netifaces==0.10.9
 numpy==1.19.4
 oauthlib==3.1.0
+openstacksdk==0.52.0
+os-client-config==2.1.0
+os-service-types==1.7.0
 pandas==1.2.0
+paramiko==2.7.2
+pbr==5.5.1
 Pillow==8.0.1
 pip-tools==5.4.0
+pkg-resources==0.0.0
 placebo==0.9.0
 psycopg2-binary==2.8.6
 pycparser==2.20
 PyJWT==1.7.1
 PyMySQL==0.10.1
+PyNaCl==1.4.0
 python-dateutil==2.8.1
 python-slugify==4.0.1
 python3-openid==3.2.0
@@ -55,9 +76,12 @@ pytz==2020.5
 PyYAML==5.3.1
 requests==2.24.0
 requests-oauthlib==1.3.0
+requestsexceptions==1.4.0
 s3transfer==0.3.3
 six==1.15.0
 sqlparse==0.4.1
+stevedore==3.3.0
+tenks==1.0.0
 text-unidecode==1.3
 toml==0.10.2
 tqdm==4.55.0
