--- a/requirements.txt
+++ b/requirements.txt
@@ -18,11 +18,13 @@ decorator==4.4.2
 defusedxml==0.6.0
 Django==3.1.4
 django-allauth==0.44.0
+django-appconf==1.0.4
 django-axes==5.10.0
 django-cors-headers==3.6.0
 django-email-verification==0.0.7
 django-extensions==3.1.0
 django-google-maps==0.12.2
+django-imagekit==4.0.2
 django-ipware==3.0.2
 django-reset-migrations==0.4.0
 django-rest-auth==0.9.5
@@ -38,6 +40,7 @@ dogpile.cache==1.1.1
 drf-api-tracking==1.7.8
 durationpy==0.5
 Faker==5.1.0
+faker-vehicle==0.2.0
 future==0.18.2
 googlemaps==4.4.2
 hjson==3.0.2
@@ -60,6 +63,7 @@ os-service-types==1.7.0
 pandas==1.2.0
 paramiko==2.7.2
 pbr==5.5.1
+pilkit==2.0
 Pillow==8.0.1
 pip-tools==5.4.0
 pkg-resources==0.0.0
