--- a/requirements.txt
+++ b/requirements.txt
@@ -90,6 +90,7 @@ text-unidecode==1.3
 toml==0.10.2
 tqdm==4.55.0
 troposphere==2.6.3
+twilio==6.51.0
 tzlocal==2.1
 urllib3==1.25.10
 Werkzeug==0.16.1
