--- a/requirements.txt
+++ b/requirements.txt
@@ -1,98 +1,246 @@
+2to3==1.0
+aiohttp==3.6.2
+amqp==2.5.2
 ansible==2.7.18
-appdirs==1.4.4
+anyjson==0.3.3
+appdirs==1.4.3
 APScheduler==3.6.3
 argcomplete==1.12.2
-asgiref==3.3.1
+argon2-cffi==19.1.0
+asgiref==3.2.3
+asn1crypto==0.24.0
+async-timeout==3.0.1
+attrs==19.3.0
+autobahn==19.11.1
+Automat==0.8.0
 Babel==2.9.0
 bcrypt==3.2.0
+beautifulsoup4==4.9.0
+billiard==3.6.1.0
 boto==2.49.0
-boto3==1.16.44
-botocore==1.19.44
-certifi==2020.6.20
-cffi==1.14.4
+boto3==1.16.25
+botocore==1.19.25
+bs4==0.0.1
+cachetools==4.0.0
+celery==4.3.0
+certifi==2019.9.11
+cffi==1.13.2
 cfn-flip==1.2.3
+channels==2.3.1
 chardet==3.0.4
-click==7.1.2
-cryptography==3.3.1
+click==7.1.1
+cobble==0.1.3
+constantly==15.1.0
+coreapi==2.3.3
+coreschema==0.0.4
+cryptography==2.8
+cssselect==1.1.0
+cycler==0.10.0
+daphne==2.4.0
 decorator==4.4.2
 defusedxml==0.6.0
-Django==3.1.4
+distlib==0.3.0
+Django==2.2.7
+django-after-response==0.2.2
 django-allauth==0.44.0
 django-appconf==1.0.4
 django-axes==5.10.0
-django-cors-headers==3.6.0
+django-cleanup==3.2.0
+django-cors-headers==3.2.0
+django-crontab==0.7.1
+django-elasticsearch-dsl==0.5.1
+django-elasticsearch-dsl-drf==0.17.6
 django-email-verification==0.0.7
+django-eventstream==2.6.0
 django-extensions==3.1.0
+django-filter==2.0.0
 django-google-maps==0.12.2
+django-grip==2.0.2
 django-imagekit==4.0.2
 django-ipware==3.0.2
+django-multiselectfield==0.1.12
+django-nine==0.2.2
+django-phonenumber-field==5.0.0
+django-postgres-copy==2.4.2
 django-reset-migrations==0.4.0
 django-rest-auth==0.9.5
 django-rest-framework==0.1.0
 django-rest-multiple-models==2.1.3
+django-rest-passwordreset==1.0.0
+django-rest-swagger==2.2.0
 django-seed==0.2.2
+django-simple-history==2.11.0
+django-smtp-ssl==1.0
 django-storages==1.6.6
-djangorestframework==3.12.2
+django-utils-six==2.0
+django-uuidfield==0.5.0
+django-widget-tweaks==1.4.8
+djangorestframework==3.9.4
 djangorestframework-api-key==2.0.0
 djangorestframework-jwt==1.11.0
 djangorestframework-simplejwt==4.4.0
+dnspython==1.16.0
+docusign-esign==3.3.0
+docutils==0.15.2
 dogpile.cache==1.1.1
 drf-api-tracking==1.7.8
 durationpy==0.5
+elasticsearch==6.4.0
+elasticsearch-dsl==6.1.0
+et-xmlfile==1.0.1
+eventlet==0.25.1
+eversign==1.1.2
 Faker==5.1.0
 faker-vehicle==0.2.0
+fcm-django==0.2.21
+filelock==3.0.12
+fire==0.3.1
+Flask==1.1.2
+flower==0.9.4
 future==0.18.2
+gevent==1.4.0
+google-api-python-client==1.7.11
+google-auth==1.11.2
+google-auth-httplib2==0.0.3
 googlemaps==4.4.2
+greenlet==0.4.15
+gripcontrol==3.3.1
+gunicorn==20.0.4
 hjson==3.0.2
-idna==2.10
+html5lib==1.0.1
+httplib2==0.17.0
+humanize==0.5.1
+hyperlink==19.0.0
+idna==2.8
+idna-ssl==1.1.0
+importlib-metadata==1.1.0
+importlib-resources==1.3.1
+incremental==17.5.0
+inflection==0.3.1
+instaloader==4.2.8
+ipaddress==1.0.23
 iso8601==0.1.13
-Jinja2==2.11.2
+itsdangerous==1.1.0
+itypes==1.1.0
+jdcal==1.4.1
+Jinja2==2.10.1
 jmespath==0.10.0
+jsonfield==2.0.2
 jsonpatch==1.28
 jsonpointer==2.0
 kappa==0.6.0
 keystoneauth1==4.3.0
+kiwisolver==1.1.0
+kombu==4.6.3
+lxml==4.4.2
+mail-parser==3.14.0
+mammoth==1.4.13
 MarkupSafe==1.1.1
+matplotlib==3.1.1
+monotonic==1.5
+more-itertools==5.0.0
+multidict==4.7.3
 munch==2.5.0
+ndg-httpsclient==0.5.1
 netifaces==0.10.9
-numpy==1.19.4
+nose==1.3.7
+numpy==1.17.4
+oauth2client==4.1.3
 oauthlib==3.1.0
+openapi-codec==1.3.2
+openpyxl==3.0.3
 openstacksdk==0.52.0
 os-client-config==2.1.0
 os-service-types==1.7.0
-pandas==1.2.0
+pandas==0.25.3
 paramiko==2.7.2
+parsel==1.5.2
+paypalrestsdk==1.13.1
 pbr==5.5.1
+pdf2docx==0.4.6
+phonenumbers==8.12.8
 pilkit==2.0
-Pillow==8.0.1
+Pillow==6.2.1
 pip-tools==5.4.0
+pipenv==2018.11.26
 pkg-resources==0.0.0
 placebo==0.9.0
-psycopg2-binary==2.8.6
-pycparser==2.20
+Protego==0.1.16
+psycopg2==2.8.4
+psycopg2-binary==2.8.4
+pubcontrol==2.4.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.7
+pycparser==2.19
+PyDispatcher==2.0.5
+pyfcm==1.4.5
+PyHamcrest==1.9.0
 PyJWT==1.7.1
+PyMuPDF==1.18.3
 PyMySQL==0.10.1
 PyNaCl==1.4.0
+pyOpenSSL==19.1.0
+pyparsing==2.4.2
+PyPDF2==1.26.0
+PySocks==1.6.8
 python-dateutil==2.8.1
+python-docx==0.8.10
 python-slugify==4.0.1
+python-vlc==3.0.11115
+python-whois==0.7.2
+python2==1.2
 python3-openid==3.2.0
-pytz==2020.5
+pytz==2019.3
 PyYAML==5.3.1
-requests==2.24.0
+Quandl==3.4.8
+queuelib==1.5.0
+redis==3.3.11
+reportlab==3.5.42
+requests==2.22.0
 requests-oauthlib==1.3.0
+requests-toolbelt==0.9.1
 requestsexceptions==1.4.0
+rsa==4.0
 s3transfer==0.3.3
+schematics==2.1.0
+scipy==1.6.1
+Scrapy==1.8.0
+service-identity==18.1.0
+simplejson==3.17.2
 six==1.15.0
-sqlparse==0.4.1
+smartystreets-python-sdk==4.4.0
+sounddevice==0.3.13
+soupsieve==2.0
+sqlparse==0.3.0
+statistics==1.0.3.5
 stevedore==3.3.0
+stripe==2.40.0
 tenks==1.0.0
+termcolor==1.1.0
 text-unidecode==1.3
 toml==0.10.2
+tornado==6.0.4
 tqdm==4.55.0
 troposphere==2.6.3
-twilio==6.51.0
+twilio==6.26.0
+Twisted==19.10.0
+txaio==18.8.1
+typing-extensions==3.7.4.1
 tzlocal==2.1
-urllib3==1.25.10
-Werkzeug==0.16.1
+uritemplate==3.0.0
+urllib3==1.25.7
+vine==1.3.0
+virtualenv==16.4.3
+virtualenv-clone==0.5.3
+w3lib==1.21.0
+webencodings==0.5.1
+Werkzeug==0.16.0
 wsgi-request-logger==0.4.6
+xhtml2pdf==0.2.4
+xlrd==1.2.0
+XlsxWriter==1.2.7
+xlwt==1.3.0
+yarl==1.4.2
 zappa==0.52.0
+zipp==0.6.0
+zope.interface==4.7.1
