--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-amqp==5.0.5
+amqp==2.6.1
 ansible==2.7.18
 appdirs==1.4.4
 APScheduler==3.6.3
@@ -11,7 +11,7 @@ billiard==3.6.3.0
 boto==2.49.0
 boto3==1.16.44
 botocore==1.19.44
-celery==5.0.5
+celery==4.3.0
 certifi==2020.6.20
 cffi==1.14.4
 cfn-flip==1.2.3
@@ -55,6 +55,7 @@ faker-vehicle==0.2.0
 fcm-django==0.3.7
 future==0.18.2
 googlemaps==4.4.2
+gunicorn==20.1.0
 hjson==3.0.2
 html5lib==1.1
 idna==2.10
@@ -65,7 +66,7 @@ jsonpatch==1.28
 jsonpointer==2.0
 kappa==0.6.0
 keystoneauth1==4.3.0
-kombu==5.0.2
+kombu==4.6.11
 MarkupSafe==1.1.1
 munch==2.5.0
 netifaces==0.10.9
@@ -84,6 +85,7 @@ pip-tools==5.4.0
 pkg-resources==0.0.0
 placebo==0.9.0
 prompt-toolkit==3.0.17
+psycopg2==2.8.6
 psycopg2-binary==2.8.6
 pycparser==2.20
 pyfcm==1.4.9
@@ -115,7 +117,7 @@ troposphere==2.6.3
 twilio==6.51.0
 tzlocal==2.1
 urllib3==1.25.10
-vine==5.0.0
+vine==1.3.0
 wcwidth==0.2.5
 webencodings==0.5.1
 Werkzeug==0.16.1
