--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,8 @@ click==7.1.2
 click-didyoumean==0.0.3
 click-plugins==1.1.1
 click-repl==0.1.6
+coreapi==2.3.3
+coreschema==0.0.4
 cryptography==3.3.1
 decorator==4.4.2
 defusedxml==0.6.0
@@ -39,6 +41,7 @@ django-rest-auth==0.9.5
 django-rest-framework==0.1.0
 django-rest-multiple-models==2.1.3
 django-rest-passwordreset==1.1.0
+django-rest-swagger==2.2.0
 django-seed==0.2.2
 django-storages==1.6.6
 django-utils-six==2.0
@@ -60,6 +63,7 @@ hjson==3.0.2
 html5lib==1.1
 idna==2.10
 iso8601==0.1.13
+itypes==1.2.0
 Jinja2==2.11.2
 jmespath==0.10.0
 jsonpatch==1.28
@@ -69,9 +73,10 @@ keystoneauth1==4.3.0
 kombu==4.6.11
 MarkupSafe==1.1.1
 munch==2.5.0
-#netifaces==0.10.9
+netifaces==0.11.0
 numpy==1.19.4
 oauthlib==3.1.0
+openapi-codec==1.3.2
 openpyxl==3.0.7
 openstacksdk==0.52.0
 os-client-config==2.1.0
@@ -87,6 +92,7 @@ placebo==0.9.0
 prompt-toolkit==3.0.17
 #psycopg2==2.8.6
 psycopg2-binary==2.8.6
+py3dns==3.2.1
 pycparser==2.20
 pyfcm==1.4.9
 PyJWT==1.7.1
@@ -105,6 +111,7 @@ requests==2.24.0
 requests-oauthlib==1.3.0
 requestsexceptions==1.4.0
 s3transfer==0.3.3
+simplejson==3.17.2
 six==1.15.0
 sqlparse==0.4.1
 stevedore==3.3.0
@@ -116,7 +123,9 @@ tqdm==4.55.0
 troposphere==2.6.3
 twilio==6.51.0
 tzlocal==2.1
+uritemplate==3.0.1
 urllib3==1.25.10
+validate-email==1.3
 vine==1.3.0
 wcwidth==0.2.5
 webencodings==0.5.1
