--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "date-fns": "^2.17.0",
     "moment": "^2.29.1",
     "native-base": "^2.15.2",
+    "pod-install": "^0.1.28",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-animatable": "^1.3.3",
@@ -52,7 +53,8 @@
     "react-navigation-drawer": "^2.6.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "update": "^0.7.4"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
