--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     ext {
         buildToolsVersion = "29.0.2"
         minSdkVersion = 21
-        compileSdkVersion = 29
+        compileSdkVersion = 31
         targetSdkVersion = 29
     }
     repositories {
@@ -13,7 +13,7 @@ buildscript {
     }
     dependencies {
         // classpath("com.android.tools.build:gradle:3.5.3")
-        classpath ("com.android.tools.build:gradle:4.0.1")
+        classpath ('com.android.tools.build:gradle:4.2.2')
         classpath 'com.google.gms:google-services:4.3.5'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -23,6 +23,22 @@ buildscript {
 allprojects {
     repositories {
         mavenLocal()
+
+         exclusiveContent {
+       // We get React Native's Android binaries exclusively through npm,
+       // from a local Maven repo inside node_modules/react-native/.
+       // (The use of exclusiveContent prevents looking elsewhere like Maven Central
+       // and potentially getting a wrong version.)
+       filter {
+           includeGroup "com.facebook.react"
+       }
+       forRepository {
+           maven {
+               url "$rootDir/../node_modules/react-native/android"
+           }
+       }
+    }
+    
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url("$rootDir/../node_modules/react-native/android")
